# openbor

./: .gitignore  CMakeLists.txt
engine/: Makefile  build.sh  environ.sh  openbor.c
engine/sdl/: menu.c
engine/source/: globals.h  savedata.h  utils.c
engine/source/gamelib/: screen.c  types.h
engine/source/ramlib/: ram.c
engine/switch/: control.c  control.h  hankaku.h  menu.c  menu.h  pngdec.c  sblaster.c  sblaster.h  sdlport.c  sdlport.h  threads.c  timer.c  video.c  video.h  videocommon.c  videocommon.h
engine/vita/: control.c  control.h  menu.c  sblaster.c  sblaster.h  shader.c  shader.h  timer.c  video.c  video.h  vitaport.c  vitaport.h
